# schnorr

./: Cargo.toml  ChangeLog.md  README.md
benches/: bench.rs
src/: dl.rs  ec.rs  identification.rs  lib.rs  public_key.rs  signature.rs  signature_scheme.rs  signer.rs  signing_key.rs  verifier.rs
src/group/: mod.rs  p256.rs
src/identification/: dl.rs  ec.rs  issue_certificate.rs  issue_params.rs  issue_secret.rs  mod.rs  ver_challenge.rs  ver_req.rs  ver_req_secret.rs  ver_response.rs
src/signature/: dl.rs  ec.rs  mod.rs
tests/: test.rs
