[package]
name = "schnorr-rs"
version = "0.1.0"
description = "Schnorr Protocols"
authors = ["alvin.cpp@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/AlvinHon/schnorr"
categories = ["cryptography"]
keywords = ["cryptography", "signature", "identification", "schnorr"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
digest = "0.10.7"
num-bigint = { version = "0.4.6", features = ["rand", "serde"] }
p256 = { version = "0.13.2", features = ["serde"]}
rand_core = "0.6"
serde = { version = "1.0.203", features = ["derive"] }
signature = "2.2.0"

[features]
default = []

[dev-dependencies]
bincode = "1"
criterion = "0.5.1"
sha2 = "0.10.8"
rand = "0.8"

[[bench]]
name = "bench"
harness = false