[package]
name = "schnorr-rs"
version = "0.2.0"
description = "Schnorr Protocols"
authors = ["alvin.cpp@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/AlvinHon/schnorr"
categories = ["cryptography"]
keywords = ["cryptography", "signature", "identification", "schnorr"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
digest = "0.10.7"
dashu = {version="0.4.2", features=["rand", "serde"]}
getrandom = {version = "0.2", features=["js"]}
p256 = { version = "0.13.2", features = ["serde"]}
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0.219", features = ["derive"] }
signature = "2.2.0"

[features]
default = []

[dev-dependencies]
bincode = { version="2", features=["serde"] }
criterion = "0.6.0"
sha2 = "0.10.9"

[[bench]]
name = "bench"
harness = false